--- a/lesson-20/index.html
+++ b/lesson-20/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.2">
+    <link rel="stylesheet" href="css/style.css?v=1.0.3">
     <title>Lesson 20</title>
 </head>
 <body>
@@ -21,12 +21,12 @@
                 <div class="menu__body">
                     <ul class="menu__list list">
                         <li class="list__item list__item--active">
-                            <a class="list__link" href="#" target="_blank">
+                            <a class="list__link" href="https://developer.mozilla.org/en-US/">
                                 Home
                             </a>
                         </li>
                         <li class="list__item list__item--arrow">
-                            <a class="list__link" href="#">
+                            <a class="list__link" href="https://developer.mozilla.org/en-US/">
                                 Shop
                             </a>
                             <div class="menu__submenu submenu">
@@ -47,7 +47,7 @@
                                         </a>
                                     </li>
                                     <li class="submenu__item">
-                                        <a class="submenu__link" href="#">
+                                        <a class="submenu__link" href="https://developer.mozilla.org/en-US/">
                                             Block #4
                                         </a>
                                     </li>
@@ -55,22 +55,22 @@
                             </div>
                         </li>
                         <li class="list__item">
-                            <a class="list__link" href="#">
+                            <a class="list__link" href="https://developer.mozilla.org/en-US/">
                                 Product
                             </a>
                         </li>
                         <li class="list__item">
-                            <a class="list__link" href="#">
+                            <a class="list__link" href="https://developer.mozilla.org/en-US/">
                                 Blog
                             </a>
                         </li>
                         <li class="list__item">
-                            <a class="list__link" href="#">
+                            <a class="list__link" href="https://developer.mozilla.org/en-US/">
                                 Pages
                             </a>
                         </li>
                         <li class="list__item">
-                            <a class="list__link" href="#">
+                            <a class="list__link" href="https://developer.mozilla.org/en-US/">
                                 Contact
                             </a>
                         </li>
@@ -111,7 +111,7 @@
                 <div class="products__content content">
                     <div class="content__item item item--big">
                         <div class="item__wrapper">
-                            <img class="item__image" src="img/content/products-big-01.webp" alt="Our popular product`s picture">
+                            <img class="item__image" src="img/example-03.jpg" alt="Our popular product`s picture">
                         </div>
                     </div>
                     <div class="content__item item">
@@ -119,9 +119,9 @@
                             <img class="item__image" src="img/content/products-small-01.webp" alt="Our popular product`s picture">
                         </div>
                         <div class="item__description description">
-                            <h3 class="description__title">
+                            <a class="description__title" href="#" target="_blank">
                                 Embossed hoop earrings
-                            </h3>
+                            </a>
                             <div class="description__price">
                                 $144.00
                             </div>
@@ -132,9 +132,9 @@
                             <img class="item__image" src="img/content/products-small-02.webp" alt="Our popular product`s picture">
                         </div>
                         <div class="item__description description">
-                            <h3 class="description__title">
+                            <a class="description__title" href="#" target="_blank">
                                 Embossed hoop earrings
-                            </h3>
+                            </a>
                             <div class="description__price">
                                 $144.00
                             </div>
@@ -145,9 +145,9 @@
                             <img class="item__image" src="img/content/products-small-03.webp" alt="Our popular product`s picture">
                         </div>
                         <div class="item__description description">
-                            <h3 class="description__title">
+                            <a class="description__title" href="#" target="_blank">
                                 Embossed hoop earrings
-                            </h3>
+                            </a>
                             <div class="description__price">
                                 $144.00
                             </div>
@@ -158,9 +158,9 @@
                             <img class="item__image" src="img/content/products-small-04.webp" alt="Our popular product`s picture">
                         </div>
                         <div class="item__description description">
-                            <h3 class="description__title">
+                            <a class="description__title" href="#" target="_blank">
                                 Embossed hoop earrings
-                            </h3>
+                            </a>
                             <div class="description__price">
                                 $144.00
                             </div>
