--- a/lesson-20/index.html
+++ b/lesson-20/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.3">
+    <link rel="stylesheet" href="css/style.css?v=1.0.4">
     <title>Lesson 20</title>
 </head>
 <body>
@@ -32,17 +32,23 @@
                             <div class="menu__submenu submenu">
                                 <ul class="submenu__list">
                                     <li class="submenu__item">
-                                        <a class="submenu__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes" target="_blank">
+                                        <a class="submenu__link"
+                                           href="https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-classes"
+                                           target="_blank">
                                             Block #1
                                         </a>
                                     </li>
                                     <li class="submenu__item">
-                                        <a class="submenu__link" href="https://developer.mozilla.org/en-US/docs/Web/API/CSSPseudoElement" target="_blank">
+                                        <a class="submenu__link"
+                                           href="https://developer.mozilla.org/en-US/docs/Web/API/CSSPseudoElement"
+                                           target="_blank">
                                             Block #2
                                         </a>
                                     </li>
                                     <li class="submenu__item">
-                                        <a class="submenu__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS/border" target="_blank">
+                                        <a class="submenu__link"
+                                           href="https://developer.mozilla.org/en-US/docs/Web/CSS/border"
+                                           target="_blank">
                                             Block #3
                                         </a>
                                     </li>
@@ -110,61 +116,56 @@
                 </div>
                 <div class="products__content content">
                     <div class="content__item item item--big">
-                        <div class="item__wrapper">
-                            <img class="item__image" src="img/example-03.jpg" alt="Our popular product`s picture">
-                        </div>
+                        <img class="item__image" src="img/content/products-big-01.webp"
+                             alt="Our popular product`s picture">
                     </div>
                     <div class="content__item item">
-                        <div class="item__wrapper">
-                            <img class="item__image" src="img/content/products-small-01.webp" alt="Our popular product`s picture">
-                        </div>
-                        <div class="item__description description">
-                            <a class="description__title" href="#" target="_blank">
+                        <img class="item__image" src="img/content/products-small-01.webp"
+                             alt="Our popular product`s picture">
+                        <a class="item__description description" href="#">
+                            <div class="description__title">
                                 Embossed hoop earrings
-                            </a>
+                            </div>
                             <div class="description__price">
                                 $144.00
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="content__item item">
-                        <div class="item__wrapper">
-                            <img class="item__image" src="img/content/products-small-02.webp" alt="Our popular product`s picture">
-                        </div>
-                        <div class="item__description description">
-                            <a class="description__title" href="#" target="_blank">
+                        <img class="item__image" src="img/content/products-small-02.webp"
+                             alt="Our popular product`s picture">
+                        <a class="item__description description" href="#">
+                            <div class="description__title">
                                 Embossed hoop earrings
-                            </a>
+                            </div>
                             <div class="description__price">
                                 $144.00
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="content__item item">
-                        <div class="item__wrapper">
-                            <img class="item__image" src="img/content/products-small-03.webp" alt="Our popular product`s picture">
-                        </div>
-                        <div class="item__description description">
-                            <a class="description__title" href="#" target="_blank">
+                        <img class="item__image" src="img/content/products-small-03.webp"
+                             alt="Our popular product`s picture">
+                        <a class="item__description description" href="#">
+                            <div class="description__title">
                                 Embossed hoop earrings
-                            </a>
+                            </div>
                             <div class="description__price">
                                 $144.00
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="content__item item">
-                        <div class="item__wrapper">
-                            <img class="item__image" src="img/content/products-small-04.webp" alt="Our popular product`s picture">
-                        </div>
-                        <div class="item__description description">
-                            <a class="description__title" href="#" target="_blank">
+                        <img class="item__image" src="img/content/products-small-04.webp"
+                             alt="Our popular product`s picture">
+                        <a class="item__description description" href="#">
+                            <div class="description__title">
                                 Embossed hoop earrings
-                            </a>
+                            </div>
                             <div class="description__price">
                                 $144.00
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
