--- a/lesson-21/index.html
+++ b/lesson-21/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.1">
+    <link rel="stylesheet" href="css/style.css?v=1.0.2">
     <title>Lesson 21</title>
 </head>
 <body>
@@ -69,7 +69,7 @@
     </header>
     <!--    Main. Page-->
     <main class="page page--position">
-        <section class="page__hero hero">
+        <div class="page__hero hero">
             <div class="hero__container">
                 <div class="hero__image image">
                     <img class="image__fullscreen" src="img/hero.webp" alt="Main picture with pretty girl">
@@ -90,7 +90,7 @@
                     Shop Now
                 </a>
             </div>
-        </section>
+        </div>
 
     </main>
     <footer class="footer">
