--- a/lesson-21/index.html
+++ b/lesson-21/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.2">
+    <link rel="stylesheet" href="css/style.css?v=1.0.3">
     <title>Lesson 21</title>
 </head>
 <body>
@@ -45,21 +45,21 @@
                 </ul>
             </nav>
             <form class="header__form form" action="#" method="GET">
+                <input type="text" class="form__search" name="search" autocomplete="off" placeholder="Search">
                 <button class="form__button" type="button">
                     <img src="img/icons/search.svg" alt="Search">
                 </button>
-                <input class="form__search" id="search" name="search" autocomplete="off" placeholder="Search">
             </form>
             <div class="header__action action">
-                <a class="action__item" href="#">
+                <button class="action__item" type="button">
                     <img class="action__favorite" src="img/icons/action-favorite.svg" alt="Action favorite">
-                </a>
-                <a class="action__item" href="#">
+                </button>
+                <button class="action__item" type="button">
                     <img class="action__user" src="img/icons/action-user.svg" alt="Action user">
-                </a>
-                <a class="action__item" href="#">
+                </button>
+                <button class="action__item" type="button">
                     <img class="action__card" src="img/icons/action-shopping-cart.svg" alt="Action card">
-                </a>
+                </button>
                 <button class="header__icon-menu" type="button">
                     <span></span>
                 </button>
