--- a/lesson-21/index.html
+++ b/lesson-21/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.3">
+    <link rel="stylesheet" href="css/style.css?v=1.0.4">
     <title>Lesson 21</title>
 </head>
 <body>
@@ -68,12 +68,12 @@
         </div>
     </header>
     <!--    Main. Page-->
-    <main class="page page--position">
+    <main class="page">
         <div class="page__hero hero">
+            <div class="hero__image image">
+                <img class="image__fullscreen" src="img/hero.webp" alt="Main picture with pretty girl">
+            </div>
             <div class="hero__container">
-                <div class="hero__image image">
-                    <img class="image__fullscreen" src="img/hero.webp" alt="Main picture with pretty girl">
-                </div>
                 <div class="hero__content content">
                     <div class="content__categories">
                         T-shirt / Tops
@@ -85,18 +85,119 @@
                     <div class="content__marks">
                         cool / colorful / comfy
                     </div>
+                    <a class="hero__button-link button-link" href="#">
+                        Shop Now
+                    </a>
                 </div>
-                <a class="hero__button-link button-link" href="#">
-                    Shop Now
-                </a>
             </div>
         </div>
 
+        <section class="page__advertising advertising">
+            <div class="advertising__container">
+                <article class="advertising__body-left body">
+                    <img class="body__background" src="img/ad/euphoria-ad-green.webp" alt="Green picture">
+                    <div class="body__content content-ad">
+                        <h1 class="content-ad__title">
+                            WE MADE YOUR EVERYDAY FASHION BETTER!
+                        </h1>
+                        <p>
+                            In our journey to improve everyday fashion, euphoria presents EVERYDAY wear range -
+                            Comfortable & Affordable fashion 24/7
+                        </p>
+                        <a class="content-ad__button-link button-link" href="#">
+                            Shop Now
+                        </a>
+                    </div>
+                </article>
+                <article class="advertising__body-right body">
+                    <img src="img/ad/euphoria-ad-yellow.webp" alt="Yellow picture with people">
+                </article>
+            </div>
+        </section>
+        <section class="page__categories categories">
+            <div class="categories__container">
+                <div class="categories__about about">
+                    <h2 class="about__title">
+                        Categories For Women
+                    </h2>
+                    <div class="categories__content content-product">
+                        <article class="content-product__item item">
+                            <a class="item__link" href="#">
+                                <img class="item__image" src="img/categories/categories-women-01.webp"
+                                     alt="Categories for women picture">
+                                <div class="item__content content-item">
+                                    <div class="content-item__description description">
+                                        <h3 class="description__title">
+                                            Hoodies & Sweatshirt
+                                        </h3>
+                                        <div class="description__text">
+                                            Explore Now!
+                                        </div>
+                                    </div>
+                                    <img class="content-item__link" src="img/icons/side-arrow.png" alt="Arrow">
+                                </div>
+                            </a>
+                        </article>
+                        <article class="content-product__item item">
+                            <a class="item__link" href="#">
+                                <img class="item__image" src="img/categories/categories-women-02.webp"
+                                     alt="Categories for women picture">
+                                <div class="item__content content-item">
+                                    <div class="content-item__description description">
+                                        <h3 class="description__title">
+                                            Coats & Parkas
+                                        </h3>
+                                        <div class="description__text">
+                                            Explore Now!
+                                        </div>
+                                    </div>
+                                    <img class="content-item__link" src="img/icons/side-arrow.png" alt="Arrow">
+                                </div>
+                            </a>
+                        </article>
+                        <article class="content-product__item item">
+                            <a class="item__link" href="#">
+                                <img class="item__image" src="img/categories/categories-women-03.webp"
+                                     alt="Categories for women picture">
+                                <div class="item__content content-item">
+                                    <div class="content-item__description description">
+                                        <h3 class="description__title">
+                                            Tees & T-Shirt
+                                        </h3>
+                                        <div class="description__text">
+                                            Explore Now!
+                                        </div>
+                                    </div>
+                                    <img class="content-item__link" src="img/icons/side-arrow.png" alt="Arrow">
+                                </div>
+                            </a>
+                        </article>
+                        <article class="content-product__item item">
+                            <a class="item__link" href="#">
+                                <img class="item__image" src="img/categories/categories-women-04.webp"
+                                     alt="Categories for women picture">
+                                <div class="item__content content-item">
+                                    <div class="content-item__description description">
+                                        <h3 class="description__title">
+                                            Boxers
+                                        </h3>
+                                        <div class="description__text">
+                                            Explore Now!
+                                        </div>
+                                    </div>
+                                    <img class="content-item__link" src="img/icons/side-arrow.png" alt="Arrow">
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
-        <h6 class="footer__title">
+        <h4 class="footer__title">
             © 2021 Pamia+ All rights reserved.
-        </h6>
+        </h4>
     </footer>
 </div>
 <script src="js/script.js"></script>
