--- a/lesson-21/index.html
+++ b/lesson-21/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.5">
+    <link rel="stylesheet" href="css/style.css?v=1.0.6">
     <title>Lesson 21</title>
 </head>
 <body>
@@ -94,7 +94,7 @@
 
         <section class="page__advertising advertising">
             <div class="advertising__container">
-                <article class="advertising__body-left body">
+                <div class="advertising__body-left body">
                     <img class="body__background" src="img/ad/euphoria-ad-green.webp" alt="Green picture">
                     <div class="body__content content-ad">
                         <h1 class="content-ad__title">
@@ -108,10 +108,10 @@
                             Shop Now
                         </a>
                     </div>
-                </article>
-                <article class="advertising__body-right body">
+                </div>
+                <div class="advertising__body-right body">
                     <img src="img/ad/euphoria-ad-yellow.webp" alt="Yellow picture with people">
-                </article>
+                </div>
             </div>
         </section>
         <section class="page__categories categories">
