--- a/lesson-22/index.html
+++ b/lesson-22/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.3">
+    <link rel="stylesheet" href="css/style.css?v=1.0.4">
     <title>Lesson 22</title>
 </head>
 <body>
@@ -61,10 +61,10 @@
         </div>
         <div class="header__main mainhead">
             <div class="mainhead__container">
-                <div class="mainhead__logo logo">
+                <a class="mainhead__logo logo" href="#">
                     <img src="img/logo.svg" alt="Logo">
                     WhiteCo<span>ll</span>ar
-                </div>
+                </a>
                 <div class="mainhead__menu menu">
                     <nav class="menu__nav nav">
                         <ul class="nav__list">
@@ -85,27 +85,27 @@
                                 <nav class="menu__submenu submenu">
                                     <ul class="submenu__list">
                                         <li class="submenu__item">
-                                            <a href="#">
+                                            <a class="submenu__link" href="#">
                                                 Products
                                             </a>
                                         </li>
                                         <li class="submenu__item">
-                                            <a href="#">
+                                            <a class="submenu__link" href="#">
                                                 Contacts
                                             </a>
                                         </li>
                                         <li class="submenu__item">
-                                            <a href="#">
+                                            <a class="submenu__link" href="#">
                                                 Favorite
                                             </a>
                                         </li>
                                         <li class="submenu__item">
-                                            <a href="#">
+                                            <a class="submenu__link" href="#">
                                                 Sale
                                             </a>
                                         </li>
                                         <li class="submenu__item">
-                                            <a href="#">
+                                            <a class="submenu__link" href="#">
                                                 Blog
                                             </a>
                                         </li>
@@ -132,6 +132,12 @@
                     <a class="menu__link link" href="#">
                         Get Consulting
                     </a>
+                    <div class="menu__button">
+                        <button class="menu__icon-menu" type="button">
+                            <span></span>
+                        </button>
+                    </div>
+
                 </div>
             </div>
         </div>
