--- a/lesson-22/index.html
+++ b/lesson-22/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css?v=1.0.4">
+    <link rel="stylesheet" href="css/style.css?v=1.0.5">
     <title>Lesson 22</title>
 </head>
 <body>
@@ -137,13 +137,110 @@
                             <span></span>
                         </button>
                     </div>
-
                 </div>
             </div>
         </div>
     </header>
     <!--    Main. Page-->
     <main class="page">
+        <section class="page__hero hero">
+            <img class="hero__background" src="img/content/hero-bg.webp" alt="Hero picture with people">
+            <div class="hero__content content">
+                <div class="content__body body">
+                    <div class="body__subtitle sub">
+                        Welcome to Whitecollar Solution
+                    </div>
+                    <h1 class="body__title">
+                        The Best Value
+                        for <span>Business</span> and
+                        Corporation
+                    </h1>
+                    <p>
+                        Collaboratively administrate empowered markets plug
+                        and play networks dynamically procrastinated
+                    </p>
+                    <div class="content__button button">
+                        <a class="button__link link" href="#" target="_blank">
+                            Get Consulting
+                        </a>
+                        <a class="button__get-link" href="#">
+                            Watch Videos
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page__business business">
+<!--            <div class="business__body">-->
+                <div class="business__side-content side">
+                    <img class="side__image" src="img/content/business.webp" alt="Picture with people">
+                    <div class="side__content content">
+                        <h3 class="content__title">
+                            We’re Ready To Grow Your
+                            Business With Us
+                        </h3>
+                        <p>
+                            Leverage agile frameworks to provide a robust synopsis for high level overviews. thinking to
+                            further the overall value proposition.
+                        </p>
+                        <a class="button__get-link" href="#" target="_blank">
+                            Get in Touch
+                        </a>
+                    </div>
+                </div>
+                <div class="business__content content">
+                    <div class="content__subtitle sub">
+                        Welcome Whitecollar
+                    </div>
+                    <h2 class="content__title">
+                        We Care About Your
+                        Business Plan.
+                    </h2>
+                    <p>
+                        Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative
+                        approaches to corporate strategy foster collaborative thinking to further the overal.
+                    </p>
+                    <p>
+                        Leverage agile frameworks to provide a robust synopsis for high level overviews.Iterative
+                        approaches to corporate strategy
+                    </p>
+                    <ul class="content__list list">
+                        <li class="list__item">
+                            Components of a Business Strategy
+                        </li>
+                        <li class="list__item">
+                            Business Consulting
+                        </li>
+                    </ul>
+                    <div class="content__box box">
+                        <ul class="box__list box-list">
+                            <li class="box-list__item">
+                                <img class="box-list__image" src="img/icons/icon-list.svg" alt="Icon green list">
+                                <div class="box-list__info info">
+                                    <div class="info__title">
+                                        Experience
+                                    </div>
+                                    <p>
+                                        Leverage frameworks toprovidee werment.
+                                    </p>
+                                </div>
+                            </li>
+                            <li class="box-list__item">
+                                <img class="box-list__image" src="img/icons/icon-prize.svg" alt="Icon green prize">
+                                <div class="box-list__info info">
+                                    <div class="info__title">
+                                        Awards Winner
+                                    </div>
+                                    <p>
+                                        Leverage frameworks toprovidee werment.
+                                    </p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+<!--            </div>-->
+        </section>
     </main>
     <footer class="footer">
 
