--- a/transport-logistic/index.html
+++ b/transport-logistic/index.html
@@ -135,7 +135,7 @@
                     <a class="side-info__link" href="#">
                         Request Quote
                     </a>
-                    <button class="button">
+                    <button class="button hoverable">
                         Submit Message
                     </button>
                 </div>
