--- a/transport-logistic/index.html
+++ b/transport-logistic/index.html
@@ -186,7 +186,7 @@
                     <h2 class="body__title title">
                         What We Do
                     </h2>
-                    <h3 class="body__subtitle-serv">
+                    <h3 class="body__subtitle">
                         Safe & Reliable Cargo Solutions
                     </h3>
                 </div>
@@ -243,9 +243,85 @@
             </div>
         </section>
 
+        <section class="page__why-us why-us">
+            <div class="why-us__background background">
+                <img class="background__image" src="img/why-us/container-full-pic.webp" alt="Full picture with container">
+            </div>
+            <div class="why-us__container">
+                <div class="why-us__content content">
+                    <div class="content__body body">
+                        <h2 class="body__title title title--width">
+                            Why Us
+                        </h2>
+                        <h3 class="body__subtitle">
+                            We provide full range global logistics solution
+                        </h3>
+                        <p>
+                            Leverage agile frameworks to provide a robust synopsis for strategy foster collaborative
+                            thinking to further the overall value proposition.
+                        </p>
+                        <p>
+                            Organically grow the holistic world view of disruptive innovation via workplace diversity
+                            and empowerment.
+                        </p>
+                        <div class="body__list list">
+                            <div class="list__item">
+                                <img class="list__image" src="img/icons/delivery.svg" alt="Icon delivery on time">
+                                <div class="list__text">
+                                    Delivery on Time
+                                </div>
+                            </div>
+                            <div class="list__item">
+                                <img class="list__image" src="img/icons/cost.svg" alt="Icon optimized travel cost">
+                                <div class="list__text">
+                                    Optimized Travel Cost
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content__picture picture">
+                        <div class="picture__up">
+                            <img class="picture__image" src="img/why-us/plane-pic.jpg" alt="Picture with plane">
+                        </div>
+                        <div class="picture__down">
+                            <img class="picture__image" src="img/why-us/girl-pic.jpg" alt="Picture with plane">
+                        </div>
+                    </div>
+                </div>
+                <div class="why-us__res res">
+                    <div class="res__item item item--left">
+                        <span>
+                            1294
+                        </span>
+                        <div class="item__res-text">
+                            Delivered Packages
+                        </div>
+                    </div>
+                    <div class="res__item item item--right">
+                        <span>
+                            3594
+                        </span>
+                        <div class="item__res-text">
+                            Satisfied Clients
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <!--FOOTER-->
     <footer class="footer">
+        <div>
+            A pseudo-class consists of a colon (:) followed by the pseudo-class name (e.g., :hover). A functional
+            pseudo-class also contains a pair of parentheses to define the arguments (e.g., :dir()). The element that a
+            pseudo-class is attached to is defined as an anchor element (e.g., button in case button:hover).
+
+            Pseudo-classes let you apply a style to an element not only in relation to the content of the document tree,
+            but also in relation to external factors like the history of the navigator (:visited, for example), the
+            status of its content (like :checked on certain form elements), or the position of the mouse (like :hover,
+            which lets you know if the mouse is over an element or not).
+        </div>
     </footer>
 </div>
 <script src="js/script.js"></script>
